test/deriver/errors/unsupported_type_extension.expected
File "_none_", line 1:
Warning 46: illegal environment variable OCAML_COLOR : expected "auto", "always" or "never"
File "unsupported_type_extension.ml", line 1, characters 0-34:
1 | type t = [%typ] [@@deriving irmin]
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: ppx_irmin: unprocessed extension [%typ ] encountered.
